--- a/style.css
+++ b/style.css
@@ -47,6 +47,9 @@ body {
 
 input[type="color"]{
   visibility: hidden;
+  position: absolute;
+  right: 0;
+  background: linear-gradient(78deg #f1f1f1, #656565);
 }
 
 .range-group{
