--- a/style.css
+++ b/style.css
@@ -91,3 +91,42 @@ input[type="range"]{
 .random-btn{
   margin-left: 30px;
 }
+
+.copy-btn{
+  position: relative;
+}
+
+.copy-btn::after{
+  position: absolute;
+  content: "Copié !";
+  display: block;
+  z-index: 1898952;
+  padding: 15px;
+  border-radius: 5px;
+  background: #f1f1f1;
+  bottom: -100%;
+  left: 50%;
+  transform: translate(-50%, 30px);
+  white-space: nowrap;
+  font-size: 18px;
+  padding: 12px;
+  opacity: 0;
+}
+
+.copy-btn.active::after{
+  animation: fade-out 1s ease-out forwards;
+}
+
+@keyframes fade-out {
+  0%{
+    opacity: 1;
+  }
+  80%{
+    opacity: 1;
+  }
+  100%{
+    opacity: 0;
+    transform: translate(-50%, 20px);
+  }
+}
+
